Coverity analysis defect 137996: Uninitialized pointer field

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • QI 2023-05-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /src/mongo/db/exec/timeseries_modify.h:84: UNINIT_CTOR 137996 Class member declaration for "isFromOplogApplication".
      /src/mongo/db/exec/timeseries_modify.h:48: UNINIT_CTOR 137996 Non-static class member "isFromOplogApplication" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/exec/timeseries_modify.h:88: UNINIT_CTOR 137996 Class member declaration for "updateDriver".
      /src/mongo/db/exec/timeseries_modify.h:48: UNINIT_CTOR 137996 Non-static class member "updateDriver" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: