SERVER-76686 Initialize all TimeseriesModifyParams fields